# docs/swagger.json
@@ -31,7 +31,7 @@
                     "200": {
                         "description": "User info",
                         "schema": {
-                            "$ref": "#/definitions/models.JWTClaim"
+                            "$ref": "#/definitions/models.DBUser"
                         }
                     },
                     "401": {
@@ -102,13 +102,39 @@
             }
         },
         "/api/user/orders": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Загрузка заказов пользователя",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Загрузка заказов пользователя",
+                "responses": {
+                    "200": {
+                        "description": "Номер заказа уже был загружен этим пользователем"
+                    },
+                    "204": {
+                        "description": "нет данных для ответа"
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера"
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Доступен только аутентифицированным пользователям. Номером заказа является последовательность цифр произвольной длины.",
+                "description": "Загрузка заказов пользователя",
                 "consumes": [
                     "text/plain"
                 ],
@@ -225,7 +251,7 @@
                 }
             }
         },
-        "models.JWTClaim": {
+        "models.DBUser": {
             "type": "object",
             "properties": {
                 "id": {
